prqlc/prql-compiler/tests/integration/snapshots/integration__sql__SELECT  name LIKE CONCAT('%', 'pika', '%') AS name_ends_withFROM  employees.snap
---
source: prqlc/prql-compiler/tests/integration/sql.rs
expression: expected
---

  SELECT
    name LIKE CONCAT('%', 'pika', '%') AS name_ends_with
  FROM
    employees

