prqlc/prql-compiler/tests/integration/snapshots/integration__sql__date_to_string_bigquery.snap
---
source: prqlc/prql-compiler/tests/integration/sql.rs
expression: "\n    SELECT\n      FORMAT_DATE('%d/%m/%Y', invoice_date) AS invoice_date_str\n    FROM\n      invoices\n    "
---
WITH table_0 AS (
  SELECT
    DATE '2021-01-01' AS d
)
SELECT
  d,
  FORMAT_DATE('%Y/%m/%d', d) AS d_str
FROM
  table_0

