prqlc/prql-compiler/tests/integration/snapshots/integration__sql__date_to_string_mysql.snap
---
source: prqlc/prql-compiler/tests/integration/sql.rs
expression: "\n    SELECT\n      DATE_FORMAT(invoice_date, '%d/%m/%Y') AS invoice_date_str\n    FROM\n      invoices\n    "
---
WITH table_0 AS (
  SELECT
    DATE '2021-01-01' AS d
)
SELECT
  d,
  DATE_FORMAT(d, '%Y/%m/%d') AS d_str
FROM
  table_0

