prqlc/prql-compiler/tests/integration/snapshots/integration__sql__date_to_string_postgres.snap
---
source: prqlc/prql-compiler/tests/integration/sql.rs
expression: "\n    SELECT\n      TO_CHAR(invoice_date, 'DD/MM/YYYY') AS invoice_date_str\n    FROM\n      invoices\n    "
---
WITH table_0 AS (
  SELECT
    DATE '2021-01-01' AS d
)
SELECT
  d,
  TO_CHAR(d, 'YYYY/MM/DD') AS d_str
FROM
  table_0

