prqlc/prql-compiler/tests/integration/snapshots/integration__sql__like_concat_generic.snap
---
source: prqlc/prql-compiler/tests/integration/sql.rs
expression: "\n  SELECT\n    name LIKE CONCAT('%', 'pika', '%') AS name_ends_with\n  FROM\n    employees\n  "
---
SELECT
  name LIKE CONCAT('%', 'pika', '%') AS name_ends_with
FROM
  employees

